# AirMonitoring

./: .gitignore  .justfile  GEMINI.md  README.md  actions-requirements.txt  airgradient_downloader.py  dashboard.py  motherduck_updater.py  pyproject.toml
.github/workflows/: airgradient-data-download.yml
data/: 2025-08-23.csv  2025-08-31.csv  2025-09-01.csv  2025-09-07.csv  2025-09-14.csv  2025-09-21.csv  2025-09-28.csv  2025-10-05.csv  2025-10-12.csv  2025-10-19.csv  2025-10-26.csv  2025-11-02.csv  2025-11-09.csv  2025-11-16.csv  2025-11-23.csv  2025-11-30.csv  2025-12-07.csv  2025-12-14.csv
